welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:3: error: type mismatch;
 found   : Unit
 required: Int
	{if (die1 == 6) {return 7}
         ^withoutDoubles:2: error: type mismatch;
 found   : Unit
 required: Int
if (noDoubles) {if (die1 == die2) 
^